01-GKE-Gateway-API-Regional-LB-Basic/04-myapp1-gateway-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-external-http
spec:
  parentRefs:
  - kind: Gateway
    name: mygateway1-regional
  rules:
  - backendRefs:
    - name: myapp1-service
      port: 80
      weight: 100

#gcloud container clusters describe it-prod-private-cluster \
#--location=us-central1 \
#--format="yaml(network, networkConfig)"

#gcloud container clusters describe it-prod-private-cluster \
#--location=us-central1 \
#--format="yaml(network, privateClusterConfig)"
